--- a/src/scss/global/_variables.scss
+++ b/src/scss/global/_variables.scss
@@ -1,7 +1,10 @@
 // Main Colors
 $primary-blue: hsl(217, 73%, 44%);
 $primary-light: rgb(127, 174, 248);
-$primary-dark: hsl(225, 91%, 13%);
+$primary-dark: rgb(9, 4, 73);
+$primary-red: hsl(0, 78%, 52%);
+$primary-orange: hsl(37, 80%, 51%);
+$primary-green: hsl(118, 81%, 40%);
 $primary-white: hsl(0, 0%, 100%);
 $primary-grey: hsl(210, 1%, 47%);
 
